--- a/style.css
+++ b/style.css
@@ -2,4 +2,43 @@
 
 body {
    background-color: rgb(207, 207, 207);
+   text-align: center;
+}
+
+#header {
+   text-align: center;
+   background-color: rgb(182, 224, 226);
+   padding: 0.5rem;
+}
+
+#jogada, #jogadas {
+   font-size: 1.5rem;
+   padding: 0.5rem;
+   margin: 0.2rem;
+}
+
+#botoesJogo {
+   background-color: rgb(101, 101, 138);
+   padding: 1rem;
+   display: flex;
+   justify-content: space-evenly;
+}
+
+.botoes {
+   background-color: black;
+   color: rgb(249, 242, 242);
+   font-size: 1.6rem;
+   padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+   border-radius: 16px;
+}
+
+.botoes:hover {
+   background-color: rgb(53, 34, 98);
+}
+
+#placar {
+   padding: 1rem;
+   font-size: 1.5rem;
+   font-style: italic;
+   font-weight: 800;
 }
