--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-* {
+body {
    margin: 0;
    padding: 0;
-}
-
-body {
    background-color: rgb(177, 238, 238);
    text-align: center;
    height: 100vh;
+   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   font-size: 16px;
+   height: 100vh;
+   display: flex;
+   flex-direction: column;
 }
 
 #header {
    text-align: center;
-   padding-bottom: 0.1rem;
+   padding-bottom: 0.5rem;
 }
 
 #desafie {
@@ -38,6 +40,7 @@ p {
 
 #dinamica {
    min-height: 240px;
+   flex-grow: 1;
 }
 #jogada, #jogadas {
    padding: 0.5rem;
@@ -57,7 +60,7 @@ p {
 #video {
    background-color: rgb(177, 238, 238);
    margin: 0;
-
+   
 }
 
 video {
@@ -66,6 +69,7 @@ video {
    border-color: rgb(241, 179, 224);
    max-height: 180px;
    margin: 5px;
+
 }
 
 #botoesJogo {
@@ -108,11 +112,19 @@ figcaption {
    padding: 1rem 0 1rem;
    font-style: italic;
    font-weight: 800;
+   min-height: 1rem;
    font-size: 0.8rem;
    background-color: aliceblue;
+}
+
+#reiniciar {
+   background-color: rgb(220, 239, 157);
+   color: rgb(26, 24, 24);
+   padding: 0.5rem;
 }
 
 #reiniciar:hover {
    background-color: blue;
    color: white;
+   padding: 0.5rem;
 }
