--- a/style.css
+++ b/style.css
@@ -129,14 +129,15 @@ figcaption {
    left: 0;
    top: 0;
    width: 100%; /* Full width */
+   
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
    -webkit-animation-name: fadeIn; /* Fade in the background */
-   -webkit-animation-duration: 0.4s;
+   -webkit-animation-duration: 1s;
    animation-name: fadeIn;
-   animation-duration: 0.4s
+   animation-duration: 1s
  }
  
  /* Modal Content */
@@ -151,33 +152,27 @@ figcaption {
    animation-duration: 0.4s
  }
  
- /* The Close Button */
- .close {
-   color: white;
-   float: right;
-   font-size: 28px;
-   font-weight: bold;
- }
- 
- .close:hover,
- .close:focus {
-   color: #000;
-   text-decoration: none;
-   cursor: pointer;
- }
- 
  .pop-header {
-   padding: 2px 16px;
-   background-color: #5cb85c;
+   padding: 20px 16px;
+   background-color: rgb(53, 34, 98);
    color: white;
+   font-size: 2rem;
  }
  
- .pop-text {padding: 2px 16px;}
+ .pop-text {
+   padding: 10px 16px;
+}
  
  .pop-botao {
-   padding: 2px 16px;
-   background-color: #5cb85c;
+   padding: 10px 16px;
+   background-color: rgb(241, 179, 224)
+}
+
+#btn-restart {
+   background-color: blueviolet;
    color: white;
+   padding: 0.5rem 1rem;
+   border-radius: 24px;
  }
  
  /* Add Animation */
