--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-* {
+body {
    margin: 0;
    padding: 0;
-}
-
-body {
    background-color: rgb(177, 238, 238);
    text-align: center;
+   height: 100vh;
+   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+   font-size: 16px;
    height: 100vh;
    display: flex;
    flex-direction: column;
@@ -13,7 +13,7 @@ body {
 
 #header {
    text-align: center;
-   padding-bottom: 0.1rem;
+   padding-bottom: 0.5rem;
 }
 
 #desafie {
@@ -28,6 +28,7 @@ h1 {
    text-shadow: 2px 2px rgb(241, 179, 224);
    margin: 0.3rem;
 }
+
 h2 {
    margin: 0;
    padding-bottom: 1rem;
@@ -39,20 +40,19 @@ p {
 }
 
 #dinamica {
-   flex-grow: 1;
    min-height: 240px;
-}
-#jogada, #jogadas {
-   padding: 0.5rem;
+   flex-grow: 1;
 }
 
 #jogadas {
+   padding: 0.5rem;
    border: solid;
    border-color:rgb(206, 248, 234);
    background-color: rgb(233, 229, 202);
 }
 
 #jogada {
+   padding: 0.5rem;
    background-color: rgb(241, 179, 224);
    padding: 1rem;
 }
@@ -60,7 +60,6 @@ p {
 #video {
    background-color: rgb(177, 238, 238);
    margin: 0;
-
 }
 
 video {
@@ -90,8 +89,8 @@ video {
    margin: 0.4rem;
    background-color: rgb(53, 34, 98);
    border-radius: 24px;
-
 }
+
 .btnImage:hover {
    background-color: brown;
    border-radius: 24px;
@@ -103,6 +102,7 @@ figcaption {
    color: aliceblue;
    font-weight: 800;
 }
+
 .botoes:hover {
    background-color: rgb(53, 34, 98);
 }
@@ -111,14 +111,21 @@ figcaption {
    padding: 1rem 0 1rem;
    font-style: italic;
    font-weight: 800;
-   font-size: 0.8rem;
    min-height: 1rem;
+   font-size: 0.8rem;
    background-color: aliceblue;
+}
+
+#reiniciar {
+   background-color: rgb(220, 239, 157);
+   color: rgb(26, 24, 24);
+   padding: 0.5rem;
 }
 
 #reiniciar:hover {
    background-color: blue;
    color: white;
+   padding: 0.5rem;
 }
 
 /* The Modal (background) */
@@ -160,6 +167,10 @@ figcaption {
  }
  
  .pop-text {
+   padding: 10px 16px;
+}
+
+.pop-text2 {
    padding: 10px 16px;
 }
  
